:rocket: Code refactoring and restarting dynos feature

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ requests = "*"
 python-telegram-bot = "*"
 bs4 = "*"
 pytz = "*"
+python-dotenv = "*"
+schedule = "*"
 
 [requires]
 python_version = "3.7"
